--- a/ODataClientConsoleApplication/ODataClientConsoleApplication/ODataClientConsoleApplication.csproj
+++ b/ODataClientConsoleApplication/ODataClientConsoleApplication/ODataClientConsoleApplication.csproj
@@ -46,6 +46,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HistoryRateHandler.cs" />
     <Compile Include="ODataClient1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -61,6 +63,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RateShortNbrb.cs" />
+    <Compile Include="Reader.cs" />
     <Compile Include="ServerODataHandler.cs" />
     <Compile Include="UserInterface.cs" />
   </ItemGroup>
